add impressions and event review, several minor changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=yes" />
-        <meta name="description" content="Wir sind das Frankfurter Multi Cloud Meetup, bei dem es um mehr als nur eine Plattform geht. Jetzt Cloud Maniac werden!" />
+        <meta name="description" content="Wir sind das Frankfurter Multi Cloud Meetup, bei dem es um mehr als eine Plattform geht. Jetzt Cloud Maniac werden!" />
         <meta property="og:image" content="https://demo.cloudmaniacs.de/images/logo.png" />
         <meta name="author" content="Maximilian Breig, Claranet GmbH" />
         <title>Cloud Maniacs Frankfurt - One cloud is not enough!</title>
@@ -41,7 +41,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white font-weight-light mb-5">Wir sind das Frankfurter Multi Cloud Meetup,<br>bei dem es um mehr als nur eine Plattform geht.</p>
+                        <p class="text-white font-weight-light mb-5">Wir sind das Frankfurter Multi Cloud Meetup,<br>bei dem es um mehr als eine Plattform geht.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Jetzt Cloud Maniac werden!</a>
                     </div>
                 </div>
@@ -57,16 +57,16 @@
                         <i class="fab fa-4x fa-aws text-white mb-4"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <i class="fab fa-4x fa-google text-white mb-4"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <i class="fab fa-4x fa-microsoft text-white mb-4"></i><br><br>
-                        <p class="text-white mb-4">Egal ob AWS, GCP, Azure, Private Cloud im Keller oder ein hybrider Mix aus allem: Bei uns steht das Public Cloud Mindset und die dahinterstehenden Konzepte im Vordergrund.
-                          <br><br>Wir beschäftigen uns unter anderem mit Autoscaling, Infrastructure as Code, Automatisierung und Delivery Pipelines, Serverless und Containern.
+                        <p class="text-white mb-4">Egal ob AWS, GCP, Azure, Private Cloud im Keller oder ein hybrider Mix aus allem: Bei uns steht das Cloud Mindset und die dahinterstehenden Konzepte im Vordergrund.
+                          <br><br>Wir beschäftigen uns unter anderem mit Autoscaling, Infrastructure as Code, Automatisierung und Delivery Pipelines, "Serverless" Architekturen, Container sowie Platinencomputer & IoT.
                           <br><br>Bei unseren Talks geht es um konkrete Beispiele aus der Praxis - wir verfolgen funktionierende, pragmatische Ansätze statt abgehobene, theoretische Konzepte.
-                          <br><br>Du willst dabei sein? Na dann mal los, sehr gerne!</p>
+                          <br><br><b>Du willst dabei sein? Sehr gerne, nur zu!</b></p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="https://www.meetup.com/cloudmaniacs-frankfurt/" target="_blank">Meetup Gruppe beitreten</a>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Services section-->
+        <!-- Platforms section-->
         <section class="page-section" id="links">
             <div class="container">
                 <h2 class="text-center mt-0">Unsere Plattformen</h2>
@@ -111,69 +111,48 @@
                 </div>
             </div>
         </section>
-        <!-- Portfolio section-->
-        <!--
-        <section id="portfolio">
+        <!-- Impressions section-->
+        <section id="impressions">
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="images/portfolio/fullsize/1.jpg"
-                            ><img class="img-fluid" src="images/portfolio/thumbnails/1.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div></a
-                        >
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="images/portfolio/fullsize/2.jpg"
-                            ><img class="img-fluid" src="images/portfolio/thumbnails/2.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div></a
-                        >
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="images/portfolio/fullsize/3.jpg"
-                            ><img class="img-fluid" src="images/portfolio/thumbnails/3.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div></a
-                        >
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="images/portfolio/fullsize/4.jpg"
-                            ><img class="img-fluid" src="images/portfolio/thumbnails/4.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div></a
-                        >
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="images/portfolio/fullsize/5.jpg"
-                            ><img class="img-fluid" src="images/portfolio/thumbnails/5.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div></a
-                        >
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="images/portfolio/fullsize/6.jpg"
-                            ><img class="img-fluid" src="images/portfolio/thumbnails/6.jpg" alt="" />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div></a
-                        >
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/1.jpg"><img class="img-fluid" src="images/impressions/thumbnails/1.jpg"></a></div>
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/2.jpg"><img class="img-fluid" src="images/impressions/thumbnails/2.jpg"></a></div>
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/3.jpg"><img class="img-fluid" src="images/impressions/thumbnails/3.jpg"></a></div>
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/4.jpg"><img class="img-fluid" src="images/impressions/thumbnails/4.jpg"></a></div>
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/5.jpg"><img class="img-fluid" src="images/impressions/thumbnails/5.jpg"></a></div>
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/6.jpg"><img class="img-fluid" src="images/impressions/thumbnails/6.jpg"></a></div>
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/7.jpg"><img class="img-fluid" src="images/impressions/thumbnails/7.jpg"></a></div>
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/8.jpg"><img class="img-fluid" src="images/impressions/thumbnails/8.jpg"></a></div>
+                    <div class="col-lg-4 col-sm-4"><a class="portfolio-box" href="images/impressions/fullsize/9.jpg"><img class="img-fluid" src="images/impressions/thumbnails/9.jpg"></a></div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Review section-->
+        <section class="page-section" id="review">
+            <div class="container text-center">
+                <h2 class="text-center mt-0">Unser letztes Meetup</h2>
+                <hr class="divider my-4" />
+                <p class="mb-5"><b>Am 23.04.2020 um 17:00 Uhr war es endlich soweit: Unser erstes Meetup stand an!</b>
+                  <br><br>Anders als ursprünglich geplant handelte es sich ganz im Sinne des Social Distancing leider um ein reines Online Event. Doch obwohl wir euch wirklich gerne persönlich kennengelernt hätten, war es dank eurer Fragen im Chat der Livestreams eine tolle Veranstaltung!
+                  <br><br>Max stellte euch sein „Corona-Meter" zum Nachbauen vor und Fedor gab einen Einblick in Infrastructure-as-Code mit Terraform – am Beispiel einer genialen Lösung zum Hosten von statischen Webseiten auf AWS. Viel Spaß beim Anschauen!
+                </p>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 text-center">
+                        <div class="mt-5">
+                            <a class="d-block" href="https://youtu.be/0cVR3mYqfm0" target="_blank">
+                                <i class="fab fa-4x fa-youtube text-primary mb-4"></i>
+                                <h3 class="h4 mb-2">Watch on YouTube</h3>
+                                <p class="text-muted mb-0">Hier geht's direkt zur<br>Aufzeichnung des Livestreams</p>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        -->
+
+
         <!-- Call to action section-->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
