add impressions and event review of the second meetup, move first meetup to seperate page, several minor changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=yes" />
         <meta name="description" content="Wir sind das Frankfurter Multi Cloud Meetup, bei dem es um mehr als eine Plattform geht. Jetzt Cloud Maniac werden!" />
-        <meta property="og:image" content="https://demo.cloudmaniacs.de/images/logo.png" />
+        <meta property="og:image" content="https://cloudmaniacs.de/images/logo.png" />
         <meta name="author" content="Maximilian Breig, Claranet GmbH" />
         <title>Cloud Maniacs Frankfurt - One cloud is not enough!</title>
         <!-- Font Awesome icons (free version)-->
@@ -24,6 +24,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#links">Links</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#impressions">Impressionen</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#review">Aufzeichnungen</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Kontakt</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.claranet.de/datenschutz" target="_blank">Datenschutz</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.claranet.de/impressum" target="_blank">Impressum</a></li>
@@ -132,21 +134,36 @@
         <!-- Review section-->
         <section class="page-section" id="review">
             <div class="container text-center">
-                <h2 class="text-center mt-0">Unser letztes Meetup</h2>
+                <h2 class="text-center mt-0">Unser letztes Meetup: OpenAir-Edition (#2)</h2>
                 <hr class="divider my-4" />
-                <p class="mb-5"><b>Am 23.04.2020 um 17:00 Uhr war es endlich soweit: Unser erstes Meetup stand an!</b>
-                  <br><br>Anders als ursprünglich geplant handelte es sich ganz im Sinne des Social Distancing leider um ein reines Online Event. Doch obwohl wir euch wirklich gerne persönlich kennengelernt hätten, war es dank eurer Fragen im Chat der Livestreams eine tolle Veranstaltung!
-                  <br><br>Max stellte euch sein „Corona-Meter" zum Nachbauen vor und Fedor gab einen Einblick in Infrastructure-as-Code mit Terraform – am Beispiel einer genialen Lösung zum Hosten von statischen Webseiten auf AWS. Viel Spaß beim Anschauen!
+                <p class="mb-5"><b>Am 10.09.2020 um 18:30 Uhr war es wieder soweit: Unser zweites Meetup stand an!</b>
+                  <br><br>Auch diesmal handelte es sich um ein reines Online Event, diesmal allerdings unter freiem Himmel und live von unserer Dachterasse im Frankfurter Ostend. Das Format war ebenfalls neu: Eine Mischung aus Vortrag und Talk Runde, moderiert von Michael Riexinger.
+                  <br><br>Als externer Speaker war Felix Peters zu Gast, der als DevOps-Engineer mit seinem Talk "Never change a running system" Einblicke in die testgetriebenen Infrastrukturentwicklung mit Ansible gab und außerdem mit Michael & Fabian Dörk, Head of Innovation, Automation & Tooling bei Claranet, ausgiebig über die Geschichte und die Zukunft der IT diskutierte. Natürlich präsentierte unser Social Media Team Flora & Karen auch wieder Zuschauerfragen aus den Chats der Livestreams bei YouTube & Twitch. Viel Spaß beim Anschauen - es lohnt sich!
                 </p>
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 text-center">
+                    <div class="col-lg-4 col-md-4 ml-auto text-center">
                         <div class="mt-5">
-                            <a class="d-block" href="https://youtu.be/0cVR3mYqfm0" target="_blank">
+                            <a class="d-block" href="https://youtu.be/qPWou8U85CM" target="_blank">
                                 <i class="fab fa-4x fa-youtube text-primary mb-4"></i>
-                                <h3 class="h4 mb-2">Watch on YouTube</h3>
-                                <p class="text-muted mb-0">Hier geht's direkt zur<br>Aufzeichnung des Livestreams</p>
+                                <h3 class="h4 mb-2">Replay the Meetup</h3>
+                                <p class="text-muted mb-0"><b>Die vollständige Aufzeichnung</b><br>des Livestreams jetzt auf YouTube</p>
                             </a>
                         </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 mr-auto text-center">
+                        <div class="mt-5">
+                            <a class="d-block" href="https://youtu.be/XltHAmyfWMk" target="_blank">
+                                <i class="fab fa-4x fa-youtube text-secondary mb-4"></i>
+                                <h3 class="h4 mb-2">Talk #1: Felix Peters</h3>
+                                <p class="text-muted mb-0"><b>"Never change a running system"</b><br>Nochmal auf YouTube ansehen</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 text-center">
+                        <br><br><br><br>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="meetup1/">Hier geht's zu Meetup #1: Corona-Edition</a>
                     </div>
                 </div>
             </div>
@@ -168,7 +185,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Kontakt</h2>
                         <hr class="divider my-4" />
-                        <p class="mb-5">Du hast Themenvorschläge oder möchtest vielleicht selbst als Speaker einen spannenden Vortrag halten? Dann zögere nicht, uns anzuschreiben - unser Organisations-Team freut sich auf dich und deine Ideen!</p>
+                        <p class="mb-5">Du hast Themenvorschläge oder möchtest selbst als Speaker einen spannenden Vortrag halten? Dann zögere nicht, uns anzuschreiben - unser Organisations-Team freut sich auf dich und deine Ideen!</p>
                     </div>
                 </div>
                 <div class="row">
