--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4"><b>Cloud Maniacs</b><br>is powered by Claranet</h2>
-                <p class="mb-5"><b>Diese Meetup Gruppe wird durch Mitarbeiter von Claranet Deutschland organisiert.</b><br><br>Claranet ist ein führender Managed Service Provider für Cloud- und Netzwerkdienstleistungen auf dem europäischen Markt - und ein Experte in der Bereitstellung von Cloud-Plattformen in eigenen Rechenzentren, auf der globalen Infrastruktur von Public Cloud Anbietern, sowie von Hybridlösungen, die beide Umgebungen kombinieren.</p>
+                <p class="mb-5"><b>Diese Meetup Gruppe wird durch Mitarbeiter von Claranet Deutschland organisiert.</b><br><br>Claranet ist ein globaler Technology Service Provider mit Kompetenzen in den Bereichen Cloud, Cyber Security, Data sowie Applications - und ein Experte in der Bereitstellung von Cloud-Plattformen in eigenen Rechenzentren, auf der globalen Infrastruktur von Public Cloud Anbietern, sowie von Hybridlösungen, die beide Umgebungen kombinieren.</p>
                 <a class="btn btn-light btn-xl" href="https://www.claranet.de/" target="_blank">Mehr über Claranet</a>
             </div>
         </section>
